turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:71: error: expected start of definition
	override def run() {
                 ^Turmite:103: error: Unmatched closing brace '}' ignored here
}
^